src/gui/util/qvalidator.cpp
@@ -398,7 +398,8 @@ static qlonglong pow10(int exp)
 QValidator::State QIntValidator::validate(QString & input, int&) const
 {
     QByteArray buff;
-    if (!locale().d->m_data->validateChars(input, QLocaleData::IntegerMode, &buff)) {
+    if (!locale().d->m_data->validateChars(input, QLocaleData::IntegerMode, &buff,
+                                           -1, locale().numberOptions() & QLocale::RejectGroupSeparator)) {
         return Invalid;
     }
 
@@ -437,7 +438,8 @@ QValidator::State QIntValidator::validate(QString & input, int&) const
 void QIntValidator::fixup(QString &input) const
 {
     QByteArray buff;
-    if (!locale().d->m_data->validateChars(input, QLocaleData::IntegerMode, &buff)) {
+    if (!locale().d->m_data->validateChars(input, QLocaleData::IntegerMode, &buff,
+                                           -1, locale().numberOptions() & QLocale::RejectGroupSeparator)) {
         return;
     }
     bool ok, overflow;
@@ -658,8 +660,10 @@ QValidator::State QDoubleValidatorPrivate::validateWithLocale(QString &input, QL
 {
     Q_Q(const QDoubleValidator);
     QByteArray buff;
-    if (!locale.d->m_data->validateChars(input, numMode, &buff, q->dec))
+    if (!locale.d->m_data->validateChars(input, numMode, &buff, q->dec,
+                                         locale.numberOptions() & QLocale::RejectGroupSeparator)) {
         return QValidator::Invalid;
+    }
 
     if (buff.isEmpty())
         return QValidator::Intermediate;
